@@ -831,6 +831,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\graphics\boundingbox.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\sizers\boxsizer.cpp"
 				>
 			</File>
